# Phasma

./: .gitignore  CMakeLists.txt  README.md
include/phasma/: direct_solvers.hpp  scaled_direct_solver.hpp  scaled_iterative_solver.hpp  scaler.hpp  sparse_matrix.hpp  types.hpp  utils.hpp
include/phasma/bindings/: bindings.hpp  direct_solver_module.hpp  iterative_solver_module.hpp  scaler_module.hpp  sparse_matrix_module.hpp
include/phasma/direct_solvers/: direct_solver_wrapper.hpp
include/phasma/iterative_solvers/: eigen_iterative_solver_wrapper.hpp  eigen_matrix_free_operator.hpp  iterative_solver_base.hpp
src/: bindings.cpp  direct_solver_module.cpp  iterative_solver_module.cpp  scaler_module.cpp  sparse_matrix_module.cpp  types_module.cpp
